--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -5,13 +5,11 @@
     {{#boardList}}
         <div class="card mb-3">
             <div class="card-body">
-                <h4 class="card-title">{{title}}</h4>
-                <div class="mb-3">{{time}}</div>
+                <h4 class="card-title mb-3">{{title}}</h4>
                 <a href="/board/{{id}}" class="btn btn-primary">상세보기</a>
             </div>
         </div>
     {{/boardList}}
-
 
     <ul class="pagination d-flex justify-content-center">
         <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
