--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -4,22 +4,19 @@
 
     <!-- 수정삭제버튼 -->
     <div class="d-flex justify-content-end">
-        <a href="/board/{{board.id}}/update-form" class="btn btn-warning me-1">수정</a>
-        <form action="/board/{{board.id}}/delete" method="post">
-            <button class="btn btn-danger">삭제</button>
-        </form>
+        <button class="btn btn-warning me-1">수정</button>
+        <button class="btn btn-danger">삭제</button>
     </div>
-
     <div class="d-flex justify-content-end">
-        <b>작성자</b> : {{board.username}}
+        <b>작성자</b> : ssar
     </div>
 
     <!-- 게시글내용 -->
     <div>
-        <h2><b>{{board.title}}</b></h2>
+        <h2><b>제목자리</b></h2>
         <hr />
         <div class="m-4 p-2">
-            {{board.content}}
+            내용입니다
         </div>
     </div>
 
