게시글 상세보기

--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -4,17 +4,26 @@
 
     <!-- 수정삭제버튼 -->
     <div class="d-flex justify-content-end">
-        <button class="btn btn-warning me-1">수정</button>
-        <button class="btn btn-danger">삭제</button>
+        <!--수정버튼은 수정이 실제로 되는게 아니라 수정 폼으로 이동하는 거니까 a태그 -->
+        <a href="/board/{{board.id}}/update-form" class="btn btn-warning me-1">수정</a>
+        <form action="/board/{{board.id}}/delete" method="post">
+            <button class="btn btn-danger">삭제</button>
+        </form>
+        <!--
+        삭제는 무조건 post로 요청해야지 get으로 요청시 위험 할 수 있다.
+        게시글을 삭제하면 클릭이 되어버리는 공격을 당할 수 있음
+        그 사람의 세션을 이용해서 공격할 수 있음
+        그래서 삭제 버튼은 from으로 감싸준다!
+        -->
     </div>
     <div class="d-flex justify-content-end">
-        <b>작성자</b> : ssar
+        <b>작성자</b> : {{board.username}}
     </div>
 
     <!-- 게시글내용 -->
     <div>
-        <h2><b>제목자리</b></h2>
-        <hr />
+        <h2><b>{{board.title}}</b></h2>
+        <hr/>
         <div class="m-4 p-2">
             내용입니다
         </div>
