게시글 수정하기

--- a/src/main/resources/templates/board/detail.mustache
+++ b/src/main/resources/templates/board/detail.mustache
@@ -25,7 +25,7 @@
         <h2><b>{{board.title}}</b></h2>
         <hr/>
         <div class="m-4 p-2">
-            내용입니다
+            {{board.content}}
         </div>
     </div>
 
